tests/src/test/resources/scala/tools/nsc/effects/io/LazyByNameRepeatedDefaultsSuite-files/lazyNeg.check
newSource:6: error: effect type mismatch;
 found   : @io
 required: @noIo
  lazy val y: Int @pure = { println(); 1 }
                                   ^
